tests/fixtures/rbi_constant.out
error: Could not match types:

        @ __ROOT__/tests/fixtures/rbi_constant.rbi:4
      4 |    def use_strs => Array::[Symbol]; end
                                     ^^^^^^ Symbol, with:
        @ __ROOT__/tests/fixtures/rbi_constant.rbi:2
      2 |    STRS = (nil : Array::[String])
                                   ^^^^^^ String

        - arising from an attempt to match:

        @ __ROOT__/tests/fixtures/rbi_constant.rbi:4
      4 |    def use_strs => Array::[Symbol]; end
                             ^^^^^^^^^^^^^^^ Array::[Symbol], with:
        @ __ROOT__/tests/fixtures/rbi_constant.rbi:2
      2 |    STRS = (nil : Array::[String])
                           ^^^^^^^^^^^^^^^ Array::[String]
