tests/fixtures/rbi_constant.rbi
class A
  STRS = (nil : Array::[String])

  def use_strs => Array::[Symbol]; end
end
